--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ blinker==1.9.0
 certifi==2025.4.26
 charset-normalizer==3.4.2
 click==8.1.8
+dotenv==0.9.9
 Flask==3.1.0
 Flask-Migrate==4.1.0
 Flask-SQLAlchemy==3.1.1
@@ -13,6 +14,7 @@ Jinja2==3.1.6
 Mako==1.3.10
 MarkupSafe==3.0.2
 PyMySQL==1.1.1
+python-dotenv==1.1.1
 requests==2.32.3
 SQLAlchemy==2.0.41
 typing_extensions==4.13.2
